[package]
name = "nprint-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
hex = "0.4"
nprint-types = { path = "../types" }
nprint-core = { path = "../core" }
nprint-templates = { path = "../templates" }
nprint-protocols = { path = "../protocols" }
nprint-runtime = { path = "../runtime" }
nprint-verification = { path = "../verification" }
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.5.1" }

[features]
default = []
