[package]
name = "nprint-protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
nprint-types = { path = "../types" }    # Shared types for contracts
nprint-core = { path = "../core" }     # Core Bitcoin Script logic
sv = "0.4.1"                          # Bitcoin Script opcodes
nprint-templates = { path = "../templates" }
nprint-dsl = { path = "../dsl" }
tokio = { version = "1.38.0", features = ["full"] }  # Async
tokio-stream = "0.1.15"
image = "0.25.1"  # Image proc
hound = "3.5.1"  # Audio
bytes = "1.6.0"  # Buffers

[features]
default = []
