[package]
name = "nprint-protocols"
version = "0.1.1"
edition = "2024"

[dependencies]
nprint-types = { path = "../types" }    # Shared types for contracts
nprint-core = { path = "../core" }     # Core Bitcoin Script logic
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.5.1" }  # Bitcoin Script opcodes
nprint-templates = { path = "../templates" }
nprint-dsl = { path = "../dsl" }
tokio = { version = "1.38.0", features = ["full"] }  # Async
tokio-stream = "0.1.15"
image = "0.25.1"  # Image proc
bytes = "1.6.0"  # Buffers
sha2 = "0.10.8" # Hashing
async-stream = "0.3.5" # stream macro
symphonia = { version = "0.5.4", features = ["aac", "flac", "mp3", "ogg", "wav"] } # Multi-audio format support

[features]
default = []
