[package]
name = "nprint-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
nprint-types = { path = "../types" }
nprint-core = { path = "../core" }
nprint-dsl = { path = "../dsl" }
nprint-templates = { path = "../templates" }
nprint-protocols = { path = "../protocols" }
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.4.1" }
futures = { version = "0.3.31", features = ["std"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
