[package]
name = "nprint-templates"
version = "0.1.0"
edition = "2021"

[dependencies]
nprint-core = { path = "../core" }
nprint-dsl = { path = "../dsl" }
nprint-types = { path = "../types" }
sha2 = "0.10.8"  # SHA-256 for Hashlock, SHAGate
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
std = []
