[package]
name = "nprint-templates"
version = "0.1.1"
edition = "2021"

[dependencies]
nprint-types = { path = "../types" }   # Shared types for contracts
nprint-core = { path = "../core" }    # Core Bitcoin Script logic
nprint-dsl = { path = "../dsl" }      # DSL for script macros
sha2 = "0.10.8"
sv = { git = "https://github.com/murphsicles/rust-sv", tag = "v0.5.0" }
lazy_static = "1.4.0"

[features]
default = []
std = []  # Optional std
