[package]
name = "nprint-verification"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
nprint-types = { path = "../types" }    # Shared types for contracts
nprint-core = { path = "../core" }     # Core Bitcoin Script logic
sv = "0.4.1"                          # Bitcoin Script opcodes
nprint-runtime = { path = "../runtime" }

[features]
default = []
